Added song add form

--- a/client/templates/includes/competition_form.html
+++ b/client/templates/includes/competition_form.html
@@ -1,4 +1,5 @@
 <template name="competitionForm">
+    <h2>Add new competition</h2>
     <form class="main form">
         <div class="form-group">
             <label class="control-label" for="url">Name:</label>
