--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -2,7 +2,8 @@
     <div class="col-md-3">
       <div class="thin-border">
           <div class="competitionItem">
-            <h3>{{name}}</h3>
+                <h3>{{name}}</h3>
+                <a href="{{pathFor 'competitionPage'}}">See more</a>
           </div>
       </div>
     </div>
