Validations and Youtube support

--- a/client/templates/includes/song_form.html
+++ b/client/templates/includes/song_form.html
@@ -5,12 +5,12 @@
             <label class="control-label" for="url">Name:</label>
             <div class="controls">
                 <input name="name" id="name" type="text" value="" placeholder="Song name" class="form-control"/>
-                <span class="help-block"></span>
+                <span class="help-block">{{errorMessage 'name'}}</span>
             </div>
-            <label class="control-label" for="uri">Uri:</label>
+            <label class="control-label" for="uri">Spotify URI or Youtube Code:</label>
             <div class="controls">
-                <input name="uri" id="uri" type="text" value="" placeholder="Spotify URI" class="form-control"/>
-                <span class="help-block"></span>
+                <input name="uri" id="uri" type="text" value="" placeholder="Spotify URI or Youtube code" class="form-control"/>
+                <span class="help-block">{{errorMessage 'uri'}}</span>
             </div>
         </div>
         <input type="submit" value="Submit" class="btn btn-primary"/>
