User selection draft with autocomplete and some DB changes

--- a/client/templates/includes/competition_form.html
+++ b/client/templates/includes/competition_form.html
@@ -2,12 +2,22 @@
     <h2>Add new competition</h2>
     <form class="main form">
         <div class="form-group">
-            <label class="control-label" for="url">Name:</label>
+            <label class="control-label" for="name">Name:</label>
             <div class="controls">
                 <input name="name" id="name" type="text" value="" placeholder="Comeptition name" class="form-control"/>
+                <span class="help-block"></span>
+            </div>
+            <label class="control-label" for="users">Users:</label>
+            <div class="controls">
+                {{#textareaAutocomplete settings=settings id="users" cols=100 rows=10}}
+                {{/textareaAutocomplete}}
                 <span class="help-block"></span>
             </div>
         </div>
         <input type="submit" value="Submit" class="btn btn-primary"/>
     </form>
+</template>
+
+<template name="userPill">
+    <span class="label-pill">{{username}}</span>
 </template>
