--- a/client/templates/includes/song_form.html
+++ b/client/templates/includes/song_form.html
@@ -8,7 +8,7 @@
     <div class="added-users">
         <ul>
             {{#each competition.users}}
-                <li>{{getUserName this}}</li>
+                <li>{{getUserName this}} <a class="remove-user" data-userid="{{this}}">X</a></li>
             {{/each}}
         </ul>
     </div>
