--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -14,6 +14,10 @@ a{
     color           : #9c3;
     text-decoration : none;
 }
+a:hover {
+    text-decoration : none;
+    font-weight     : bold;
+}
 
 .starRating:not(old){
     display        : inline-block;
@@ -62,9 +66,9 @@ a{
     font-size: 28px;
 }
 .thin-border {
-    -webkit-box-shadow: 5px 3px 5px 0px rgba(50, 50, 50, 0.27);
-    -moz-box-shadow:    5px 3px 5px 0px rgba(50, 50, 50, 0.27);
-    box-shadow:         5px 3px 5px 0px rgba(50, 50, 50, 0.27);
+    -webkit-box-shadow: 5px 3px 15px 0px rgba(50, 50, 50, 0.27);
+    -moz-box-shadow:    5px 3px 15px 0px rgba(50, 50, 50, 0.27);
+    box-shadow:         5px 3px 15px 0px rgba(50, 50, 50, 0.27);
 }
 
 .margin-bottom {
@@ -84,4 +88,21 @@ a{
     font-size: 14px;
     font-weight: bold;
     text-decoration: none;
+}
+
+.user-list {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.user-list li {
+    padding: 5px;
+    margin: 5px;
+    background-color: greenyellow;
+}
+
+.user-list li a {
+    color: black;
+    cursor: pointer;
+    float: right;
 }
