--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -1,7 +1,7 @@
 <template name="competitionItem">
     <div class="col-md-3">
       <div class="thin-border">
-          <div class="competitionItem">
+          <div class="competitionItem {{competitionOwnerStyle _id}}">
                 <h3>{{name}}</h3>
                 <a href="{{pathFor 'competitionPage'}}">See more</a>
           </div>
