--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -9,7 +9,7 @@
             <div class="added-users">
                 <ul class="user-list">
                     {{#each competition.users}}
-                        <li class="">
+                        <li class="btn btn-md">
                             <span class="user-name">{{getUserName this}}</span>
                             <a class="remove-user" data-userid="{{this}}">X</a>
                         </li>
