--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -24,8 +24,8 @@
             <div class="col-md-6">
                 <h3>Your rating:</h3>
                 <p>
-                  <span class="starRating">
-                    <input id="{{this._id}}_rating5" type="radio" name="rating" value="5">
+                  <span class="starRating" data-songid="{{this._id}}">
+                    <input id="{{this._id}}_rating5"  type="radio" name="rating" value="5">
                     <label for="{{this._id}}_rating5">5</label>
                     <input id="{{this._id}}_rating4" type="radio" name="rating" value="4">
                     <label for="{{this._id}}_rating4">4</label>
