--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -50,6 +50,7 @@
                         </div>
                     </div>
                 {{/each}}
+                <span class="average-row">average raiting: {{averageRating this}}</span>
             </div>
         </div>
     </div>
