end competition and admin rights only for the competition creator

--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,6 +1,7 @@
 <template name="levyraatiMainLayout">
     <body>
         {{> header}}
+        {{> errors}}
         <div class="jumbotron">
             <div class="container">
                 {{> yield "jumbotron"}}
