--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -46,7 +46,9 @@
                             {{/each}}
                         </div>
                         <div class="col-md-6">
-                            <span class="btn">{{getUserName this.userId}}</span>
+
+                                <span>{{getUserName this.userId}}</span>
+
                         </div>
                     </div>
                 {{/each}}
