--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -53,7 +53,7 @@ a:hover {
 }
 
 .rating-row {
-    border-bottom: thin solid #000;
+    border-bottom: thin solid #EEEEEE;
     margin-right: 10px;
 }
 .breadcrumb {
