--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -13,7 +13,9 @@
                             {{#each competition.users}}
                                 <li class="btn btn-md">
                                     <span class="user-name">{{getUserName this}}</span>
-                                    <a class="remove-user" data-userid="{{this}}">X</a>
+                                    {{#if isCreator}}
+                                        <a class="remove-user" data-userid="{{this}}">X</a>
+                                    {{/if}}
                                 </li>
                             {{/each}}
                         </div>
