--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -3,68 +3,78 @@
 </template>
 
 <template name="competitionActions">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Users in the competition</h2>
-            <div class="added-users">
-                <ul class="user-list">
-                    <div class="row">
-                        <div class="col-md-12">
-                            {{#each competition.users}}
-                                <li class="btn btn-md">
-                                    <span class="user-name">{{getUserName this}}</span>
-                                    {{#if isCreator}}
-                                        <a class="remove-user" data-userid="{{this}}">X</a>
-                                    {{/if}}
-                                </li>
-                            {{/each}}
+    {{#if isClosed}}
+        {{> competitionEnd competition}}
+    {{else}}
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Users in the competition</h2>
+
+                <div class="added-users">
+                    <ul class="user-list">
+                        <div class="row">
+                            <div class="col-md-12">
+                                {{#each competition.users}}
+                                    <li class="btn btn-md">
+                                        <span class="user-name">{{getUserName this}}</span>
+                                        {{#if isCreator ..}}
+                                            <a class="remove-user" data-userid="{{this}}">X</a>
+                                        {{/if}}
+                                    </li>
+                                {{/each}}
+                            </div>
                         </div>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                {{#if isCreator}}
+                    <h2>Add users</h2>
+
+                    <div class="controls">
+                        <form class="user form">
+                            <div class="controls">
+                                <label class="control-label" for="users">add user:</label>
+                                {{> inputAutocomplete settings=settings id="users" class="input-xlarge form-control"}}
+                                <span class="help-block"></span>
+                            </div>
+                        </form>
                     </div>
-                </ul>
+                    <button id="end-competition" class="btn btn-danger">End competition</button>
+                {{/if}}
             </div>
         </div>
+        {{#if noSongSubmitted}}
+            <div class="row">
+                <div class="col-md-12">
+                    <hr/>
+                    <h2>Add new song</h2>
+                </div>
+                <form class="main form">
+                    <div class="form-group">
+                        <div class="col-md-6">
+                            <label class="control-label" for="url">Name:</label>
 
-        <div class="col-md-6">
-            {{#if isCreator}}
-            <h2>Add users</h2>
-            <div class="controls">
-                <form class="user form">
-                    <div class="controls">
-                        <label class="control-label" for="users">add user:</label>
-                        {{> inputAutocomplete settings=settings id="users" class="input-xlarge form-control"}}
-                        <span class="help-block"></span>
+                            <div class="controls">
+                                <input name="name" id="name" type="text" value="" placeholder="Song name"
+                                       class="form-control"/>
+                                <span class="help-block">{{errorMessage 'name'}}</span>
+                            </div>
+                            <input type="submit" value="Submit" class="btn btn-primary"/>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="control-label" for="uri">Spotify URI or Youtube Code:</label>
+
+                            <div class="controls">
+                                <input name="uri" id="uri" type="text" value=""
+                                       placeholder="Spotify URI or Youtube code" class="form-control"/>
+                                <span class="help-block">{{errorMessage 'uri'}}</span>
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
-            <button id="end-competition" class="btn btn-danger">End competition</button>
-            {{/if}}
-        </div>
-    </div>
-    {{#if noSongSubmitted}}
-    <div class="row">
-        <div class="col-md-12">
-            <hr />
-            <h2>Add new song</h2>
-        </div>
-        <form class="main form">
-            <div class="form-group">
-                <div class="col-md-6">
-                    <label class="control-label" for="url">Name:</label>
-                    <div class="controls">
-                        <input name="name" id="name" type="text" value="" placeholder="Song name" class="form-control"/>
-                        <span class="help-block">{{errorMessage 'name'}}</span>
-                    </div>
-                    <input type="submit" value="Submit" class="btn btn-primary"/>
-                </div>
-                <div class="col-md-6">
-                    <label class="control-label" for="uri">Spotify URI or Youtube Code:</label>
-                    <div class="controls">
-                        <input name="uri" id="uri" type="text" value="" placeholder="Spotify URI or Youtube code" class="form-control"/>
-                        <span class="help-block">{{errorMessage 'uri'}}</span>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
+        {{/if}}
     {{/if}}
 </template>
