--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -8,18 +8,7 @@
         {{/if}}
         <div class="">
             <div class="col-md-6">
-                <div class="songItem" style="padding: 10px">
-                    <h3>{{name}}</h3>
-                    {{#if isSpotify this}}
-                        <iframe src="https://embed.spotify.com/?uri={{uri}}" width="300" height="380"
-                                frameborder="0" allowtransparency="true"></iframe>
-                    {{else}}
-                        <iframe id="ytplayer" type="text/html" width="500" height="300"
-                                src="http://www.youtube.com/embed/{{uri}}?autoplay=0"
-                                frameborder="0">
-                        </iframe>
-                    {{/if}}
-                </div>
+                {{>songPlayer this}}
             </div>
             <div class="col-md-6">
                 <h3>Your rating:</h3>
@@ -46,9 +35,7 @@
                             {{/each}}
                         </div>
                         <div class="col-md-6">
-
-                                <span>{{getUserName this.userId}}</span>
-
+                            <span>{{getUserName this.userId}}</span>
                         </div>
                     </div>
                 {{/each}}
