--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -6,50 +6,41 @@ a:hover {
     font-weight     : bold;
 }
 
-.starRating:not(old){
-    display        : inline-block;
-    width          : 7.5em;
-    height         : 1.5em;
-    overflow       : hidden;
-    vertical-align : bottom;
+.navbar-brand {
+    color: #ffffff;
+    font-size: 50px !important;
 }
 
-.starRating:not(old) > input{
-    margin-right : -100%;
-    opacity      : 0;
+.navbar-custom {
+    padding: 20px 0;
+    border-bottom: 0;
+    letter-spacing: 1px;
+    color: #EEEEEE;
+    background: 0 0;
+    background-color:rgba(0, 0, 0, 0.5);
+    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    transition: background .5s ease-in-out,padding .5s ease-in-out;
 }
 
-.starRating:not(old) > label{
-    display         : block;
-    float           : right;
-    position        : relative;
-    background      : url('../images/star-off.svg');
-    background-size : contain;
-}
-
-.starRating:not(old) > label:before{
-    content         : '';
-    display         : block;
-    width           : 1.5em;
-    height          : 1.5em;
-    background      : url('../images/star-on.svg');
-    background-size : contain;
-    opacity         : 0;
-    transition      : opacity 0.2s linear;
-}
-
-.starRating:not(old) > label:hover:before,
-.starRating:not(old) > label:hover ~ label:before,
-.starRating:not(:hover) > :checked ~ label:before{
-    opacity : 1;
+.navbar-custom.top-nav-collapse {
+    color: #EEEEEE;
+    padding: 0;
+    border-bottom: 1px solid rgba(255,255,255,.3);
+    background: #000;
 }
 
 .errors .alert {
     padding-top: 60px;
 }
 
-.jumbotron hr {
-    border-top: 1px solid #000;
+.jumbotron {
+    color: #EEEEEE;
+    padding-top: 140px;
+    padding-bottom: 100px;
+    background: url(../images/gramophone-macro.jpg);
+    background-size : cover;
+    background-color: #000000;
 }
 
 .rating-row {
@@ -57,14 +48,13 @@ a:hover {
     margin-right: 10px;
 }
 .breadcrumb {
-    margin: 0;
-    padding-top: 60px;
-    background-color: #EEEEEE;
-    border-bottom: thin solid #CCCCD2;
+    margin: 0 0 0 3px;
+    background-color: inherit;
     border-radius: 0px;
+    color: #EEEEEE;
 }
 .breadcrumb a {
-    color: #000000;
+    color: #EEEEEE;
 }
 
 .navbar-right {
