--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -47,13 +47,16 @@
         </div>
         {{#if noSongSubmitted}}
             <div class="row">
-                <div class="col-md-12">
-                    <hr/>
+                <div class="col-md-6">
                     <h2>Add new song</h2>
+                    <p>Here you can add your killer tune to the competition.
+                        Currently spotify URIs and youtube hashes are supported.
+                        So just go for it and take home the win!</p>
                 </div>
-                <form class="main form">
-                    <div class="form-group">
-                        <div class="col-md-6">
+                <div class="col-md-6">
+
+                    <form class="main form">
+                        <div class="form-group">
                             <label class="control-label" for="url">Name:</label>
 
                             <div class="controls">
@@ -61,9 +64,7 @@
                                        class="form-control"/>
                                 <span class="help-block">{{errorMessage 'name'}}</span>
                             </div>
-                            <input type="submit" value="Submit" class="btn btn-primary"/>
-                        </div>
-                        <div class="col-md-6">
+
                             <label class="control-label" for="uri">Spotify URI or Youtube Code:</label>
 
                             <div class="controls">
@@ -71,9 +72,10 @@
                                        placeholder="Spotify URI or Youtube code" class="form-control"/>
                                 <span class="help-block">{{errorMessage 'uri'}}</span>
                             </div>
+                            <input type="submit" value="Submit" class="btn btn-primary"/>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         {{/if}}
     {{/if}}
