validity checks and stylings

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -30,10 +30,6 @@ a:hover {
     background: #000;
 }
 
-.errors .alert {
-    padding-top: 60px;
-}
-
 .jumbotron {
     color: #EEEEEE;
     padding-top: 140px;
@@ -43,10 +39,20 @@ a:hover {
     background-color: #000000;
 }
 
-.rating-row {
-    border-bottom: thin solid #EEEEEE;
-    margin-right: 10px;
+.jumbotron-player {
+    margin-left: 60px;
 }
+
+.rating-row {
+    border-bottom: thin solid #B3A9A9;
+    margin-right: 10px;
+    padding: 5px 0;
+}
+
+.rating-row img {
+    height: 20px;
+}
+
 .breadcrumb {
     margin: 0 0 0 3px;
     background-color: inherit;
@@ -78,15 +84,14 @@ a:hover {
 .competitionItem {
     background-color: #EEEEEE;
     margin: 2px 5px 5px 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
 }
 .competitionItem i {
     font-size: 30px;
 }
 
 .competitionItem .owner {
-
+    background-color: #2B77BA;
 }
 
 .competitionItem a {
@@ -128,4 +133,15 @@ a:hover {
 
 .button-col {
     margin-top: 10px;
+}
+
+.song-entry {
+    color: #EEEEEE;
+    background-color: #555555;
+}
+
+footer {
+    padding: 60px 0;
+    color: #EEEEEE;
+    background-color: #000000;
 }
