--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -1,10 +1,8 @@
 <template name="competitionItem">
-    <div class="col-md-3 competitionItem">
-        <div class="row {{competitionOwnerStyle _id}}">
-            <div class="col-md-2">
+    <div class="col-md-4 competitionItem {{competitionOwnerStyle _id}}">
+        <div class="row">
+            <div class="col-md-12">
                 <i class="fa fa-music"></i>
-            </div>
-            <div class="col-md-10">
                 <a href="{{pathFor 'competitionPage'}}">{{name}}</a>
             </div>
         </div>
