--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -72,9 +72,9 @@ a:hover {
     font-size: 28px;
 }
 .thin-border {
-    -webkit-box-shadow: 5px 3px 15px 0px rgba(50, 50, 50, 0.27);
-    -moz-box-shadow:    5px 3px 15px 0px rgba(50, 50, 50, 0.27);
-    box-shadow:         5px 3px 15px 0px rgba(50, 50, 50, 0.27);
+    -webkit-box-shadow: 10px 10px 15px 0px rgba(50, 50, 50, 0.27);
+    -moz-box-shadow:    10px 10px 15px 0px rgba(50, 50, 50, 0.27);
+    box-shadow:         10px 10px 15px 0px rgba(50, 50, 50, 0.27);
 }
 
 .margin-bottom {
@@ -137,7 +137,32 @@ a:hover {
 
 .song-entry {
     color: #EEEEEE;
-    background-color: #555555;
+    padding-bottom: 20px;
+}
+
+.song-bg1 {
+    background: url(../images/song-bg1.jpg);
+    background-size : cover;
+}
+
+.song-bg2 {
+    background: url(../images/song-bg2.jpg);
+    background-size : cover;
+}
+
+.song-bg3 {
+    background: url(../images/song-bg3.jpg);
+    background-size : cover;
+}
+
+.song-bg4 {
+    background: url(../images/song-bg4.jpg);
+    background-size : cover;
+}
+
+.song-bg5 {
+    background: url(../images/song-bg5.jpg);
+    background-size : cover;
 }
 
 footer {
