song entry stylings

--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -1,5 +1,5 @@
 <template name="songItem">
-    <div class="row song-entry thin-border margin-bottom {{getSongBackground}}">
+    <div class="row song-entry thin-border margin-bottom">
         {{#if isOkToEdit}}
             <div class="col-md-12 button-col">
                 <a class="edit-song btn btn-primary" data-songid="{{this._id}}">Edit song</a>
