--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -138,31 +138,16 @@ a:hover {
 .song-entry {
     color: #EEEEEE;
     padding-bottom: 20px;
-}
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,45484d+100 */
+    background: #000000; /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  #000000 0%, #45484d 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#000000), color-stop(100%,#45484d)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  #000000 0%,#45484d 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  #000000 0%,#45484d 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  #000000 0%,#45484d 100%); /* IE10+ */
+    background: linear-gradient(135deg,  #000000 0%,#45484d 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#45484d',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 
-.song-bg1 {
-    background: url(../images/song-bg1.jpg);
-    background-size : cover;
-}
-
-.song-bg2 {
-    background: url(../images/song-bg2.jpg);
-    background-size : cover;
-}
-
-.song-bg3 {
-    background: url(../images/song-bg3.jpg);
-    background-size : cover;
-}
-
-.song-bg4 {
-    background: url(../images/song-bg4.jpg);
-    background-size : cover;
-}
-
-.song-bg5 {
-    background: url(../images/song-bg5.jpg);
-    background-size : cover;
 }
 
 footer {
