song entry stylings

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -135,6 +135,10 @@ a:hover {
     margin-top: 10px;
 }
 
+.rating-form {
+    margin-top: 10px;
+}
+
 .song-entry {
     color: #EEEEEE;
     padding-bottom: 20px;
