--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -1,30 +1,36 @@
 <template name="songItem">
     <div class="row song-entry thin-border margin-bottom">
-        {{#if isOkToEdit}}
-            <div class="col-md-12 button-col">
-                <a class="edit-song btn btn-primary" data-songid="{{this._id}}">Edit song</a>
-            </div>
-        {{/if}}
         <div class="col-md-6">
+            {{#if isOkToEdit}}
+                <div class=" button-col">
+                    <a class="edit-song btn btn-primary" data-songid="{{this._id}}">Edit song</a>
+                </div>
+            {{/if}}
             {{>songPlayer this}}
         </div>
         <div class="col-md-6">
-            <h3>Your rating:</h3>
-
-            <span class="starRating" data-songid="{{this._id}}">
-                <input id="{{this._id}}_rating5"  type="radio" name="{{this._id}}_rating" value="5" {{ratingChecked 5}}>
-                <label for="{{this._id}}_rating5">5</label>
-                <input id="{{this._id}}_rating4" type="radio" name="{{this._id}}_rating" value="4" {{ratingChecked 4}}>
-                <label for="{{this._id}}_rating4">4</label>
-                <input id="{{this._id}}_rating3" type="radio" name="{{this._id}}_rating" value="3" {{ratingChecked 3}}>
-                <label for="{{this._id}}_rating3">3</label>
-                <input id="{{this._id}}_rating2" type="radio" name="{{this._id}}_rating" value="2" {{ratingChecked 2}}>
-                <label for="{{this._id}}_rating2">2</label>
-                <input id="{{this._id}}_rating1" type="radio" name="{{this._id}}_rating" value="1" {{ratingChecked 1}}>
-                <label for="{{this._id}}_rating1">1</label>
-             </span>
-
-            <h3>Ratings:</h3>
+            <div class="row">
+            <form class="main form rating-form">
+                <div class="form-group">
+                    <label class="control-label col-md-4" for="{{this._id}}_rating">Your raiting:</label>
+                    <div class="controls col-md-8">
+                        <span class="starRating" data-songid="{{this._id}}">
+                            <input id="{{this._id}}_rating5"  type="radio" name="{{this._id}}_rating" value="5" {{ratingChecked 5}}>
+                            <label for="{{this._id}}_rating5">5</label>
+                            <input id="{{this._id}}_rating4" type="radio" name="{{this._id}}_rating" value="4" {{ratingChecked 4}}>
+                            <label for="{{this._id}}_rating4">4</label>
+                            <input id="{{this._id}}_rating3" type="radio" name="{{this._id}}_rating" value="3" {{ratingChecked 3}}>
+                            <label for="{{this._id}}_rating3">3</label>
+                            <input id="{{this._id}}_rating2" type="radio" name="{{this._id}}_rating" value="2" {{ratingChecked 2}}>
+                            <label for="{{this._id}}_rating2">2</label>
+                            <input id="{{this._id}}_rating1" type="radio" name="{{this._id}}_rating" value="1" {{ratingChecked 1}}>
+                            <label for="{{this._id}}_rating1">1</label>
+                         </span>
+                    </div>
+                </div>
+            </form>
+            </div>
+            <h4>Ratings</h4>
             <table class="table">
                 <thead>
                     <tr>
