--- a/client/stylesheets/chat.css
+++ b/client/stylesheets/chat.css
@@ -57,3 +57,16 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+
+.chat-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+.chat-container {
+    position: fixed;
+    bottom: 0px;
+    right: 20px;
+    width: 300px
+}
