--- a/client/templates/includes/chat.html
+++ b/client/templates/includes/chat.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
         </div>
-        <div class="panel-body">
+        <div id="chat-panel-body" class="panel-body">
             <ul class="chat">
                 {{#each chats}}
                     <li class="clearfix">
