--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         {{#if noSongSubmitted}}
-            <div class="row">
+            <div class="row spaceme">
                 <div class="col-md-6">
                     <h2>Add new song</h2>
                     <p>Here you can add your killer tune to the competition.
