--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -106,10 +106,13 @@ a:hover {
     text-transform: uppercase;
 }
 
+.competitionItem a:hover {
+    font-weight     : normal;
+}
+
 #login-buttons a{
     color: gray;
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 12px;
     text-decoration: none;
 }
 
