--- a/client/templates/includes/competition_end.html
+++ b/client/templates/includes/competition_end.html
@@ -3,7 +3,7 @@
         {{#with winner}}
             <div class="col-md-6">
                 <h3>And the winner is...</h3>
-                <h2>{{getUserName this}}</h2>
+                <h2>{{getUserName this.creator}}</h2>
                 <p>Congratulations to the winner! He/She truly knows what's hot right now.
                     You can listen to the winner once again and jam the night away.</p>
                 <a id="seeTheResults" class="btn btn-success">See all of the results.</a>
