--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -7,7 +7,7 @@
                 {{> yield "jumbotron"}}
             </div>
         </div>
-        <div class="container">
+        <div class="container main-content">
             {{>yield}}
         </div>
         <footer>
