--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -63,14 +63,14 @@
                             <div class="controls">
                                 <input name="uri" id="uri" type="text" value=""
                                        placeholder="Spotify URI or Youtube code" class="form-control"/>
-                                <span class="help-block">{{errorMessage 'uri'}}</span>
+                                <span class="help-block error">{{errorMessage 'uri'}}</span>
                             </div>
 
                             <label class="control-label" for="url">Name:</label>
                             <div class="controls">
                                 <input name="name" id="name" type="text" value="" placeholder="Song name"
                                        class="form-control"/>
-                                <span class="help-block">{{errorMessage 'name'}}</span>
+                                <span class="help-block error">{{errorMessage 'name'}}</span>
                             </div>
 
                             <input type="submit" value="Submit" class="btn btn-primary"/>
