competition list stylings and validations. Also description added for competitions.

--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -1,10 +1,13 @@
 <template name="competitionItem">
-    <div class="col-md-4 competitionItem {{competitionOwnerStyle _id}}">
-        <div class="row">
-            <div class="col-md-12">
-                <i class="fa fa-music"></i>
-                <a href="{{pathFor 'competitionPage'}}">{{name}}</a>
-            </div>
-        </div>
+    <div class="col-md-4 {{competitionOwnerStyle _id}}">
+        <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-music fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">{{name}}</h4>
+        <p class="text-muted">{{description}}</p>
+        <span class="text-left">
+            <a href="{{pathFor 'competitionPage'}}">to competition...</a>
+        </span>
     </div>
 </template>
