--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -94,32 +94,27 @@ a:hover {
  margin-bottom: 20px;
 }
 
-.competitionItem {
+.competitions {
     background-color: #EEEEEE;
-    margin: 2px 5px 5px 5px;
-    padding: 10px;
-}
-.competitionItem i {
-    font-size: 30px;
+    padding-bottom: 20px;
 }
 
-.competitionItem .owner {
-    background-color: #2B77BA;
-}
-
-.competitionItem a {
-    color: #000000;
-    font-size: 20px;
-    text-align: center;
+.competitions h3 {
     text-transform: uppercase;
 }
 
-.competitionItem a:hover {
-    font-weight     : normal;
+.open-competitions .text-primary {
+    color: #FED136;
 }
 
+
+.closed-competitions .text-primary {
+    color: #D9534F;
+}
+
+
 #login-buttons a{
-    color: gray;
+    color: #EEEEEE;
     font-size: 12px;
     text-decoration: none;
 }
@@ -171,7 +166,7 @@ a:hover {
     color: #EEEEEE;
     padding-bottom: 20px;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,45484d+100 */
-    background: #000000; /* Old browsers */
+    background: #000000;
     background: -moz-linear-gradient(-45deg,  #000000 0%, #45484d 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#000000), color-stop(100%,#45484d)); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(-45deg,  #000000 0%,#45484d 100%); /* Chrome10+,Safari5.1+ */
