--- a/client/templates/competitions/competitions_list.html
+++ b/client/templates/competitions/competitions_list.html
@@ -1,16 +1,15 @@
 <template name="competitionsList">
-    <div class="row">
-        <div class="competitions col-md-6">
-            <h3>Open competitions</h3>
-            {{#each openCompetitions}}
-                {{> competitionItem}}
-            {{/each}}
-        </div>
-        <div class="competitions col-md-6">
-            <h3>Closed competitions</h3>
-          {{#each closedCompetitions}}
+    <div class="row text-center open-competitions competitions">
+        <h3>Open competitions</h3>
+        {{#each openCompetitions}}
             {{> competitionItem}}
-          {{/each}}
-        </div>
+        {{/each}}
+    </div>
+    <div class="row text-center spaceme closed-competitions competitions">
+        <h3>Closed competitions</h3>
+        {{#each closedCompetitions}}
+            {{> competitionItem}}
+        {{/each}}
+
     </div>
 </template>
