owner competitons color marked

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -103,6 +103,10 @@ a:hover {
     text-transform: uppercase;
 }
 
+.open-competitions .owner .text-primary {
+    color: #5CB85C;
+}
+
 .open-competitions .text-primary {
     color: #FED136;
 }
