add multiple users from you'r previous competitions

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -111,6 +111,9 @@ a:hover {
     color: #FED136;
 }
 
+.help-block {
+    color: #EEEEEE;
+}
 
 .closed-competitions .text-primary {
     color: #D9534F;
