--- a/client/templates/competitions/competition_item.html
+++ b/client/templates/competitions/competition_item.html
@@ -2,7 +2,7 @@
     <div class="col-md-4 {{competitionOwnerStyle _id}}">
         <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-music fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-microphone fa-stack-1x fa-inverse"></i>
         </span>
         <h4 class="service-heading">{{name}}</h4>
         <p class="text-muted">{{description}}</p>
