--- a/client/templates/includes/competition_actions.html
+++ b/client/templates/includes/competition_actions.html
@@ -2,6 +2,11 @@
     <span class="label-pill">{{username}}</span>
 </template>
 
+<template name="competitionPill">
+    <span class="label-pill">{{name}}</span>
+</template>
+
+
 <template name="competitionActions">
     {{#if isClosed}}
         {{> competitionEnd competition}}
@@ -9,7 +14,6 @@
         <div class="row">
             <div class="col-md-6">
                 <h2>Users in the competition</h2>
-
                 <div class="added-users">
                     <ul class="user-list">
                         <div class="row">
@@ -37,7 +41,8 @@
                             <div class="controls">
                                 <label class="control-label" for="users">add user:</label>
                                 {{> inputAutocomplete settings=settings id="users" class="input-xlarge form-control"}}
-                                <span class="help-block"></span>
+                                <span class="help-block">You can select individual users by typing '@'-mark and add
+                                    multiple users from your previous competition by selecting a competition with '!'-mark.</span>
                             </div>
                         </form>
                     </div>
