--- a/client/templates/songs/song_item.html
+++ b/client/templates/songs/song_item.html
@@ -6,6 +6,7 @@
                     <a class="edit-song btn btn-primary" data-songid="{{this._id}}">Edit song</a>
                 </div>
             {{/if}}
+            <h4>Entry by {{getUserName this.creator}}</h4>
             {{>songPlayer this}}
         </div>
         <div class="col-md-6">
